EM-325: Added backup scripts

--- a/openshift/templates/minio-backup/minio-backup.bc.yaml
+++ b/openshift/templates/minio-backup/minio-backup.bc.yaml
@@ -50,7 +50,7 @@ objects:
         git:
           uri: https://github.com/MaxWardle/esm-server.git
           ref: EM-325
-        contextDir: openshift/templates
+        contextDir: openshift/templates/minio-backup
         dockerfile: |
           FROM alpine:latest
           USER root
